V1.1.1 Responsive Align Content Issue

--- a/style.css
+++ b/style.css
@@ -1033,7 +1033,7 @@ main .right-container>img {
     height: 40px;
     width: 40px;
     border-radius: 50%;
-    padding-top: 12px;
+    padding-top: 25%;
     transition: all 1s;
 }
 
